# radarmd

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml
configs/: base.yaml  convnext.yaml  densenet121.yaml  smoke.yaml  sweep.yaml
docker/: Dockerfile
notebooks/: colab_train.ipynb  kaggle_train.ipynb
scripts/: benchmark.py  evaluate.py  evaluate_localization.py  export_onnx.py  inspect_batch.py  pack_shards.py  prepare_data.py  serve_gradio.py  train.py
src/radarmd/: __init__.py
src/radarmd/data/: __init__.py  bboxes.py  constants.py  datamodule.py  dataset.py  labels.py  shards.py  splits.py  transforms.py
src/radarmd/evaluation/: __init__.py  inference.py  metrics.py  report.py  thresholds.py
src/radarmd/interpret/: __init__.py  evaluate.py  gradcam.py  localization.py
src/radarmd/models/: __init__.py  factory.py
src/radarmd/serve/: __init__.py  app.py  gradio_ui.py  onnx_export.py  overlay.py  predictor.py  preprocess.py
src/radarmd/training/: __init__.py  config.py  module.py
tests/: conftest.py  test_bboxes.py  test_config.py  test_dataset.py  test_evaluation.py  test_gradcam.py  test_labels.py  test_localization.py  test_model.py  test_module.py  test_preprocess_parity.py  test_serve.py  test_shards.py  test_splits.py
