[project]
name = "radarmd"
version = "0.1.0"
description = "Chest X-ray triage: detection and localization of 14 thoracic pathologies on NIH ChestX-ray14."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Aarush Narang" }]

dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "lightning>=2.2",
    "monai>=1.3",
    "timm>=1.0",
    "torchmetrics>=1.3",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "numpy>=1.26",
    "pillow>=10.2",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Experiment tracking (heavy / network); kept optional so CI and smoke tests
# don't require a wandb account.
track = ["wandb>=0.16"]
# Grad-CAM localization (stage 4).
interpret = ["grad-cam>=1.5"]
# Deployment stack (stages 6-7).
serve = [
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "gradio>=4.20",
    "python-multipart>=0.0.9",
    "prometheus-fastapi-instrumentator>=7.0",
]
# Dataset download helpers.
data = ["kagglehub>=0.2"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radarmd"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter; long strings tolerated
    "B008",  # FastAPI relies on function calls (Depends/File) in arg defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Resolve the package from src/ directly so the suite is immune to editable-
# install hiccups (uv's incremental editable .pth can drop off on `uv sync
# --extra`); a clean `uv sync` still installs it normally for scripts.
pythonpath = ["src"]
